remove slideshow on love story

--- a/index.html
+++ b/index.html
@@ -515,199 +515,34 @@
             <span class="section-divider divider-primary"></span>
           </div>
         </div>
-
         <div class="row">
-          <div
-            id="carousel-love-story"
-            class="carousel mb-4 flickity-enabled is-draggable"
-            tabindex="0"
-          >
-                <div
-                  class="carousel-cell align-items-center g-0 justify-content-center justify-content-lg-between row flickity-cell is-selected"
-                  style="transform: translateX(0%)"
-                >
-                  <div class="col-md-8 col-lg-5 mb-5 mb-lg-0">
-                    <div
-                      class="img-clip-path clip-love-story position-relative"
-                    >
-                      <img
-                        src="images/love-story-1.jpg"
-                        alt=""
-                        class="img-fluid"
-                      />
-                    </div>
-                  </div>
-
-                  <div class="col-lg-6 text-center text-lg-start">
-                    <h4 class="font-alt">First Meet Each Other</h4>
-                    <hr class="border-secondary mx-auto mx-lg-0 sep-line" />
-                    <p>
-                      Milea and Dilan met the modern way: by swiping right on
-                      Tinder in 2021. Their first date was a bit of a
-                      disaster-it started pouring while they were enjoying their
-                      outdoor dinner, Dilan fell into a mud puddle, and they had
-                      to wait over an hour for a subway train. However, their
-                      second date went much better and they've been together
-                      ever since.
-                    </p>
-                    <p class="m-0">
-                      There are many variations of passages of Lorem Ipsum
-                      available, but the majority have suffered alteration in
-                      some form, by injected humour, or randomised words which
-                      don't look even slightly believable.
-                    </p>
-                  </div>
-                </div>
-                <div
-                  class="carousel-cell align-items-center g-0 justify-content-center justify-content-lg-between row flickity-cell"
-                  aria-hidden="true"
-                  style="transform: translateX(100%)"
-                >
-                  <div class="col-md-8 col-lg-5 mb-5 mb-lg-0">
-                    <div
-                      class="img-clip-path clip-love-story position-relative"
-                    >
-                      <img
-                        src="images/love-story-2.jpg"
-                        alt=""
-                        class="img-fluid"
-                      />
-                    </div>
-                  </div>
-
-                  <div class="col-lg-6 text-center text-lg-start">
-                    <h4 class="font-alt">When We Go Out Together</h4>
-                    <hr class="border-secondary mx-auto mx-lg-0 sep-line" />
-                    <p>
-                      Lorem Ipsum has been the industry's standard dummy text
-                      ever since the 1500s, when an unknown printer took a
-                      galley of type and scrambled it to make a type specimen
-                      book.
-                    </p>
-                    <p class="m-0">
-                      There are many variations of passages of Lorem Ipsum
-                      available, but the majority have suffered alteration in
-                      some form, by injected humour, or randomised words which
-                      don't look even slightly believable. If you are going to
-                      use a passage of Lorem Ipsum, you need to be sure there
-                      isn't anything embarrassing hidden in the middle of text.
-                    </p>
-                  </div>
-                </div>
-                <div
-                  class="carousel-cell align-items-center g-0 justify-content-center justify-content-lg-between row flickity-cell"
-                  aria-hidden="true"
-                  style="transform: translateX(200%)"
-                >
-                  <div class="col-md-8 col-lg-5 mb-5 mb-lg-0">
-                    <div
-                      class="img-clip-path clip-love-story position-relative"
-                    >
-                      <img
-                        src="images/love-story-3.jpg"
-                        alt=""
-                        class="img-fluid"
-                      />
-                    </div>
-                  </div>
-
-                  <div class="col-lg-6 text-center text-lg-start">
-                    <h4 class="font-alt">Have a Lovely Time</h4>
-                    <hr class="border-secondary mx-auto mx-lg-0 sep-line" />
-                    <p>
-                      Lorem Ipsum has been the industry's standard dummy text
-                      ever since the 1500s, when an unknown printer took a
-                      galley of type and scrambled it to make a type specimen
-                      book.
-                    </p>
-                    <p class="m-0">
-                      There are many variations of passages of Lorem Ipsum
-                      available, but the majority have suffered alteration in
-                      some form, by injected humour, or randomised words which
-                      don't look even slightly believable. If you are going to
-                      use a passage of Lorem Ipsum, you need to be sure there
-                      isn't anything embarrassing hidden in the middle of text.
-                    </p>
-                  </div>
-                </div>
-                <div
-                  class="carousel-cell align-items-center g-0 justify-content-center justify-content-lg-between row flickity-cell"
-                  aria-hidden="true"
-                  style="transform: translateX(300%)"
-                >
-                  <div class="col-md-8 col-lg-5 mb-5 mb-lg-0">
-                    <div
-                      class="img-clip-path clip-love-story position-relative"
-                    >
-                      <img
-                        src="images/love-story-4.jpg"
-                        alt=""
-                        class="img-fluid"
-                      />
-                    </div>
-                  </div>
-
-                  <div class="col-lg-6 text-center text-lg-start">
-                    <h4 class="font-alt">We Fall in Love Each Other</h4>
-                    <hr class="border-secondary mx-auto mx-lg-0 sep-line" />
-                    <p>
-                      Lorem Ipsum has been the industry's standard dummy text
-                      ever since the 1500s, when an unknown printer took a
-                      galley of type and scrambled it to make a type specimen
-                      book.
-                    </p>
-                    <p class="m-0">
-                      There are many variations of passages of Lorem Ipsum
-                      available, but the majority have suffered alteration in
-                      some form, by injected humour, or randomised words which
-                      don't look even slightly believable. If you are going to
-                      use a passage of Lorem Ipsum, you need to be sure there
-                      isn't anything embarrassing hidden in the middle of text.
-                    </p>
-                  </div>
-                </div>
-                <div
-                  class="carousel-cell align-items-center g-0 justify-content-center justify-content-lg-between row flickity-cell"
-                  aria-hidden="true"
-                  style="transform: translateX(400%)"
-                >
-                  <div class="col-md-8 col-lg-5 mb-5 mb-lg-0">
-                    <div
-                      class="img-clip-path clip-love-story position-relative"
-                    >
-                      <img
-                        src="images/love-story-5.jpg"
-                        alt=""
-                        class="img-fluid"
-                      />
-                    </div>
-                  </div>
-
-                  <div class="col-lg-6 text-center text-lg-start">
-                    <h4 class="font-alt">We Decide to Live Together</h4>
-                    <hr class="border-secondary mx-auto mx-lg-0 sep-line" />
-                    <p>
-                      Lorem Ipsum has been the industry's standard dummy text
-                      ever since the 1500s, when an unknown printer took a
-                      galley of type and scrambled it to make a type specimen
-                      book.
-                    </p>
-                    <p class="m-0">
-                      There are many variations of passages of Lorem Ipsum
-                      available, but the majority have suffered alteration in
-                      some form, by injected humour, or randomised words which
-                      don't look even slightly believable. If you are going to
-                      use a passage of Lorem Ipsum, you need to be sure there
-                      isn't anything embarrassing hidden in the middle of text.
-                    </p>
-                  </div>
-                </div>
+          <div class="align-items-center g-0 justify-content-center row">
+            <div class="col-md-8 col-lg-5 mb-5 mb-lg-0">
+              <div class="img-clip-path clip-love-story position-relative">
+                <img src="images/love-story-1.jpg" alt="" class="img-fluid" />
+              </div>
+            </div>
+            <div class="col-lg-6 text-center text-lg-start">
+              <h4 class="font-alt">First Meet Each Other</h4>
+              <hr class="border-secondary mx-auto mx-lg-0 sep-line" />
+              <p>
+                Milea and Dilan met the modern way: by swiping right on Tinder
+                in 2021. Their first date was a bit of a disaster-it started
+                pouring while they were enjoying their outdoor dinner, Dilan
+                fell into a mud puddle, and they had to wait over an hour for a
+                subway train. However, their second date went much better and
+                they've been together ever since.
+              </p>
+              <p class="m-0">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable.
+              </p>
+            </div>
           </div>
-
-          <ul
-            class="carousel-page font-alt fs-5 fw-bold list-inline text-center"
-          >
         </div>
+      </div>
       </div>
     </section>
 
