add auto scroll on desktop

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100 w-100">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Dahlia - Responsive Wedding Invitation</title>
     <link rel="preload" href="css/style.min.css" as="style" />
     <link rel="preload" href="js/script.min.js" as="script" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Waypoints JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 
@@ -35,12 +40,12 @@
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
     <link href="css/style.min.css" rel="stylesheet" />
     <link href="css/custom.min.css" rel="stylesheet" />
+    <link href="css/custom.css" rel="stylesheet" />
 
     <link
       rel="icon"
@@ -91,7 +96,7 @@
       </svg>
     </div>
 
-    <header class="fixed-top">
+    <header class="fixed-top d-none" id="navbar">
       <nav class="navbar navbar-expand-lg p-0">
         <div class="container">
           <div class="navbar-brand align-items-center d-flex d-lg-none me-0">
@@ -165,9 +170,7 @@
       </nav>
     </header>
 
-    <span class="spacer d-block w-100"></span>
-
-    <section id="hero" class="bg-img-cover bg-overlay position-relative">
+    <section id="hero" class="h-100 bg-img-cover bg-overlay position-relative ">
       <div class="container">
         <div class="row g-0 justify-content-center justify-content-lg-start">
           <div
@@ -199,7 +202,7 @@
       </div>
     </section>
 
-    <section id="the-couple">
+    <section id="the-couple" class-="position-relative">
       <div class="container">
         <div class="row mb-5 pb-lg-5">
           <div class="col-12 text-center">
@@ -226,7 +229,7 @@
                 </div>
               </div>
 
-              <div class="col-md-6 text-center text-md-start">
+              <div class="col-md-6 text-center text-md-start fade-in" data-scroll="fade-in">
                 <h5 class="font-alt fw-bold text-uppercase">Jane Milea</h5>
                 <p class="font-alt fst-italic text-muted">
                   I kind of have a thing for Him
@@ -926,8 +929,6 @@
     </footer>
 
     <script src="js/script.min.js"></script>
+    <script src="js/custom-script.js"></script>
   </body>
-
-  <script>
-  </script>
 </html>
