--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-lg-6 mb-5 mb-lg-0">
+          <div class="col-lg-6 mb-5 mb-lg-0 fade-in">
             <div class="row align-items-center">
               <div class="col-md-6">
                 <div class="bg-white border mb-3 mb-md-0 p-2 position-relative">
@@ -229,7 +229,7 @@
                 </div>
               </div>
 
-              <div class="col-md-6 text-center text-md-start fade-in" data-scroll="fade-in">
+              <div class="col-md-6 text-center text-md-start" data-scroll="fade-in">
                 <h5 class="font-alt fw-bold text-uppercase">Jane Milea</h5>
                 <p class="font-alt fst-italic text-muted">
                   I kind of have a thing for Him
@@ -244,7 +244,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 fade-in">
             <div class="row align-items-center">
               <div class="col-md-6">
                 <div class="bg-white border mb-3 mb-md-0 p-2 position-relative">
@@ -291,7 +291,7 @@
           </div>
         </div>
 
-        <div class="row gx-lg-5 justify-content-center">
+        <div class="row gx-lg-5 justify-content-center fade-in">
           <div class="col-md-9 col-lg-6 col-xl-5 mb-5 mb-lg-0">
             <div class="bg-white h-100 p-5 rounded shadow">
               <h3 class="font-alt fs-4 fw-bold text-uppercase">The Ceremony</h3>
@@ -511,7 +511,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="align-items-center g-0 justify-content-center row">
+          <div class="align-items-center g-0 justify-content-center row fade-in">
             <div class="col-md-8 col-lg-5 mb-5 mb-lg-0">
               <div class="img-clip-path clip-love-story position-relative">
                 <img src="images/love-story-1.jpg" alt="" class="img-fluid" />
@@ -545,7 +545,7 @@
       <div class="container position-relative">
         <div class="row g-0">
           <div
-            class="col-md-9 col-lg-6 col-xl-5 bg-white p-5 position-relative rounded"
+            class="col-md-9 col-lg-6 col-xl-5 bg-white p-5 position-relative rounded fade-in"
           >
             <h3 class="font-alt fs-4 fw-bold text-uppercase">
               How He Proposed
@@ -595,7 +595,7 @@
 
         <div class="row">
           <div class="col-12">
-            <div class="gallery-wrapper">
+            <div class="gallery-wrapper fade-in">
               <div
                 class="gallery-grid"
               >
@@ -740,7 +740,7 @@
       <div class="container position-relative">
         <div class="row g-0">
           <div
-            class="col-md-9 col-lg-6 col-xl-5 bg-white p-5 position-relative rounded"
+            class="col-md-9 col-lg-6 col-xl-5 bg-white p-5 position-relative rounded fade-in"
           >
             <h3 class="font-alt fs-4 fw-bold text-uppercase">Wedding Gifts</h3>
             <hr class="border-secondary sep-line" />
