fix error slider

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.9.3/venobox.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.9.3/venobox.min.js"
+    ></script>
 
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.9.3/venobox.min.css"
-    type="text/css"
-    media="screen"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.9.3/venobox.min.css"
+      type="text/css"
+      media="screen"
     />
 
     <link
@@ -170,7 +173,7 @@
       </nav>
     </header>
 
-    <section id="hero" class="h-100 bg-img-cover bg-overlay position-relative ">
+    <section id="hero" class="h-100 bg-img-cover bg-overlay position-relative">
       <div class="container">
         <div class="row g-0 justify-content-center justify-content-lg-start">
           <div
@@ -196,7 +199,6 @@
               Request the honor of your presence at their wedding ceremony and
               reception.
             </p>
-
           </div>
         </div>
       </div>
@@ -229,7 +231,10 @@
                 </div>
               </div>
 
-              <div class="col-md-6 text-center text-md-start" data-scroll="fade-in">
+              <div
+                class="col-md-6 text-center text-md-start"
+                data-scroll="fade-in"
+              >
                 <h5 class="font-alt fw-bold text-uppercase">Jane Milea</h5>
                 <p class="font-alt fst-italic text-muted">
                   I kind of have a thing for Him
@@ -511,33 +516,44 @@
           </div>
         </div>
         <div class="row">
-          <div class="align-items-center g-0 justify-content-center row fade-in">
-            <div class="col-md-8 col-lg-5 mb-5 mb-lg-0">
-              <div class="img-clip-path clip-love-story position-relative">
-                <img src="images/love-story-1.jpg" alt="" class="img-fluid" />
+          <div
+            id="carousel-love-story"
+            class="carousel mb-4 flickity-enabled is-draggable"
+            tabindex="0"
+          >
+            <div
+              class="carousel-cell align-items-center g-0 justify-content-center justify-content-lg-between row flickity-cell is-selected"
+              style="transform: translateX(0%)"
+            >
+              <div class="col-md-8 col-lg-5 mb-5 mb-lg-0">
+                <div class="img-clip-path clip-love-story position-relative">
+                  <img src="images/love-story-1.jpg" alt="" class="img-fluid" />
+                </div>
+              </div>
+              <div class="col-lg-6 text-center text-lg-start">
+                <h4 class="font-alt">First Meet Each Other</h4>
+                <hr class="border-secondary mx-auto mx-lg-0 sep-line" />
+                <p>
+                  Milea and Dilan met the modern way: by swiping right on Tinder
+                  in 2021. Their first date was a bit of a disaster-it started
+                  pouring while they were enjoying their outdoor dinner, Dilan
+                  fell into a mud puddle, and they had to wait over an hour for
+                  a subway train. However, their second date went much better
+                  and they've been together ever since.
+                </p>
+                <p class="m-0">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even slightly believable.
+                </p>
               </div>
             </div>
-            <div class="col-lg-6 text-center text-lg-start">
-              <h4 class="font-alt">First Meet Each Other</h4>
-              <hr class="border-secondary mx-auto mx-lg-0 sep-line" />
-              <p>
-                Milea and Dilan met the modern way: by swiping right on Tinder
-                in 2021. Their first date was a bit of a disaster-it started
-                pouring while they were enjoying their outdoor dinner, Dilan
-                fell into a mud puddle, and they had to wait over an hour for a
-                subway train. However, their second date went much better and
-                they've been together ever since.
-              </p>
-              <p class="m-0">
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour, or randomised words which don't look even
-                slightly believable.
-              </p>
-            </div>
           </div>
+          <ul
+            class="carousel-page font-alt fs-5 fw-bold list-inline text-center d-none"
+          >
         </div>
-      </div>
       </div>
     </section>
 
@@ -596,12 +612,8 @@
         <div class="row">
           <div class="col-12">
             <div class="gallery-wrapper fade-in">
-              <div
-                class="gallery-grid"
-              >
-                <div
-                  class="item"
-                >
+              <div class="gallery-grid">
+                <div class="item">
                   <figure>
                     <div class="gallery-img">
                       <a
@@ -615,9 +627,7 @@
                   </figure>
                 </div>
 
-                <div
-                  class="item"
-                >
+                <div class="item">
                   <figure>
                     <div class="gallery-img">
                       <a
@@ -631,9 +641,7 @@
                   </figure>
                 </div>
 
-                <div
-                  class="item"
-                >
+                <div class="item">
                   <figure>
                     <div class="gallery-img">
                       <a
@@ -647,9 +655,7 @@
                   </figure>
                 </div>
 
-                <div
-                  class="item"
-                >
+                <div class="item">
                   <figure>
                     <div class="gallery-img">
                       <a
@@ -663,9 +669,7 @@
                   </figure>
                 </div>
 
-                <div
-                  class="item"
-                >
+                <div class="item">
                   <figure>
                     <div class="gallery-img">
                       <a
@@ -679,9 +683,7 @@
                   </figure>
                 </div>
 
-                <div
-                  class="item"
-                >
+                <div class="item">
                   <figure>
                     <div class="gallery-img">
                       <a
@@ -695,9 +697,7 @@
                   </figure>
                 </div>
 
-                <div
-                  class="item"
-                >
+                <div class="item">
                   <figure>
                     <div class="gallery-img">
                       <a
@@ -711,9 +711,7 @@
                   </figure>
                 </div>
 
-                <div
-                  class="item"
-                >
+                <div class="item">
                   <figure>
                     <div class="gallery-img">
                       <a
