Add slideshow for mobile

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                         data-gall="photos"
                         class="venobox"
                       >
-                        <img src="images/gallery-1.jpg" alt="" />
+                        <img src="images/gallery-1.jpg" alt="" style="max-width:100%;" />
                       </a>
                     </div>
                   </figure>
@@ -635,7 +635,7 @@
                         data-gall="photos"
                         class="venobox"
                       >
-                        <img src="images/gallery-2.jpg" alt="" />
+                        <img src="images/gallery-2.jpg" alt="" style="max-width:100%;" />
                       </a>
                     </div>
                   </figure>
@@ -649,7 +649,7 @@
                         data-gall="photos"
                         class="venobox"
                       >
-                        <img src="images/gallery-3.jpg" alt="" />
+                        <img src="images/gallery-3.jpg" alt="" style="max-width:100%;" />
                       </a>
                     </div>
                   </figure>
@@ -663,7 +663,7 @@
                         data-gall="photos"
                         class="venobox"
                       >
-                        <img src="images/gallery-4.jpg" alt="" />
+                        <img src="images/gallery-4.jpg" alt="" style="max-width:100%;" />
                       </a>
                     </div>
                   </figure>
@@ -677,7 +677,7 @@
                         data-gall="photos"
                         class="venobox"
                       >
-                        <img src="images/gallery-5.jpg" alt="" />
+                        <img src="images/gallery-5.jpg" alt="" style="max-width:100%;" />
                       </a>
                     </div>
                   </figure>
@@ -691,7 +691,7 @@
                         data-gall="photos"
                         class="venobox"
                       >
-                        <img src="images/gallery-6.jpg" alt="" />
+                        <img src="images/gallery-6.jpg" alt="" style="max-width:100%;" />
                       </a>
                     </div>
                   </figure>
@@ -705,7 +705,7 @@
                         data-gall="photos"
                         class="venobox"
                       >
-                        <img src="images/gallery-7.jpg" alt="" />
+                        <img src="images/gallery-7.jpg" alt="" style="max-width:100%;" />
                       </a>
                     </div>
                   </figure>
@@ -719,7 +719,7 @@
                         data-gall="photos"
                         class="venobox"
                       >
-                        <img src="images/gallery-8.jpg" alt="" />
+                        <img src="images/gallery-8.jpg" alt="" style="max-width:100%;" />
                       </a>
                     </div>
                   </figure>
