Add scroll for info

--- a/index.html
+++ b/index.html
@@ -200,6 +200,16 @@
               reception.
             </p>
           </div>
+          <div id="scroll-for-info"
+            class="col-12 py-5 text-center position-relative"
+          >
+            <p class="font-alt mb-1 text-light fw-bold">
+              Scroll for more info
+            </p>
+            <svg stroke="currentColor" fill="none" stroke-width="0" viewBox="0 0 24 24" color="white" aria-hidden="true" focusable="false" style="color:white" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 13l-7 7-7-7m14-8l-7 7-7-7"></path>
+            </svg>
+          </div>
         </div>
       </div>
     </section>
